--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>my page</title>
-    <link rel="stylesheet" type="test/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body style="background-color:Linen">
 
@@ -21,4 +21,4 @@
 <div style="color:DarkBlue">MY HOBBIES-</div><p2 style="font-size:150%">Reading books,Browsing net,cooking,silk thread craft work and balloon decoration.</p2>
 </p>
 </body>
-</HTML>
+</html>
