--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,6 @@
 <html>
 <head<
-<title>my page</tilte>
+<title>MY PAGE</tilte>
 <link rel="style sheet" type="text/css" href="style.css">
 </head>
 <center>
